log.txt
hello.c: In function ‘main’:
hello.c:4:5: error: implicit declaration of function ‘prtinf’ [-Wimplicit-function-declaration]
    4 |     prtinf("Hello, World!\n"); // Typo: prtinf instead of printf
      |     ^~~~~~
hello.c:4:5: warning: incompatible implicit declaration of built-in function ‘prtinf’ [-Wbuiltin-declaration-mismatch]
hello.c:4:5: note: include ‘<stdio.h>’ or provide a declaration of ‘prtinf’
